--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -457,6 +457,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_show_nsfw_boards_summary">Show unmoderated boards</string>
     <string name="pref_autohide_title">Autohide</string>
     <string name="pref_autohide_summary">Automatic hiding by regular expressions</string>
+    <string name="pref_hide_completely_title">Hide completely</string>
+    <string name="pref_hide_completely_summary">Do not show hidden posts and threads</string>
     <string name="pref_external_links_confirmation_title">Links confirmation</string>
     <string name="pref_external_links_confirmation_summary">Ask before going external links</string>
     <string name="pref_do_not_close_tabs_title">Do not close tabs</string>
