--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -396,6 +396,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_prefs_domain_category">Домен</string>
     <string name="makaba_prefs_domain">Домен</string>
     <string name="makaba_prefs_domain_summary">Резервні адреси: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
+    <string name="makaba_prefs_skip_captcha">Пропустити капчу</string>
     
     <string name="mikuba_password_ignored">(ігнорується)</string>
     
