--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -386,6 +386,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_prefs_domain_category">Domain</string>
     <string name="makaba_prefs_domain">Domain</string>
     <string name="makaba_prefs_domain_summary">Reserved domains: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
+    <string name="makaba_prefs_skip_captcha">Skip captcha</string>
     
     <string name="mikuba_password_ignored">(ignored)</string>
     
