--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -189,6 +189,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="context_menu_delete_files">Удалить файлы</string>
     <string name="context_menu_report">Пожаловаться</string>
     <string name="context_menu_share">Поделиться</string>
+    <string name="context_menu_share_link">Поделиться ссылкой</string>
     <string name="context_menu_search_google">Искать в Google</string>
     <string name="context_menu_delete_autohide_rule">Удалить правило</string>
     <string name="context_menu_quickaccess_add">Добавить в быстрый доступ</string>
