Swipe to close gallery preference

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -558,4 +558,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>45\uff05</item>
         <item>50\uff05</item>
     </string-array>
+    <string name="pref_gallery_swipe_to_close_summary">Swipe up or down to close gallery</string>
+    <string name="pref_gallery_swipe_to_close_title">Swipe to close gallery</string>
 </resources>
