--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -130,6 +130,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="boardslist_btn_go">GO</string>
     <string name="boardslist_favorite_boards">Favoriten</string>
     <string name="boardslist_empty_list">Die Liste der Favoritenboards ist leer</string>
+    <string name="boardslist_quickaccess_tip">Sie können Imageboards zum Schnellzugang hinzufügen (Menü öffnen)</string>
     
     <string name="search_bar_hint">Suche</string>
     <string name="search_bar_in_thread_hint">Suche in Thread</string>
@@ -158,6 +159,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="menu_search_google">In Google suchen</string>
     <string name="menu_open">Öffnen</string>
     <string name="menu_open_player">Den externen Player öffnen</string>
+    <string name="menu_quickaccess_add">Zum Schnellzugang</string>
     
     <string name="context_menu_move">Bewegen</string>
     <string name="context_menu_copy_url">Den Link Kopieren</string>
