--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -140,6 +140,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="boardslist_btn_go">Перейти</string>
     <string name="boardslist_favorite_boards">Обране</string>
     <string name="boardslist_empty_list">Обраних дошок немає</string>
+    <string name="boardslist_quickaccess_tip">Ви можете додати іміджборди до швидкого доступу (відкрийте меню)</string>
     
     <string name="search_bar_hint">Пошук</string>
     <string name="search_bar_in_thread_hint">Пошук у треді</string>
@@ -168,6 +169,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="menu_search_google">Пошук Google</string>
     <string name="menu_open">Відкрити</string>
     <string name="menu_open_player">Відкрити у плеєрі</string>
+    <string name="menu_quickaccess_add">До швидкого доступу</string>
     
     <string name="context_menu_move">Перемістити</string>
     <string name="context_menu_copy_url">Копіювати лінк</string>
