--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -457,6 +457,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_hide_personal_summary">Immer die Standardwerte verwenden</string>
     <string name="pref_random_hash_title">Zufällige Hash</string>
     <string name="pref_random_hash_summary">Ein paar Bytes an das Ende der Anlagedateien fügen</string>
+    <string name="pref_show_all_chans_list_title">Imageboards-Liste</string>
+    <string name="pref_show_all_chans_list_summary">Die Liste aller unterstützten Imageboards auf dem neuen Tab anzeigen</string>
     <string name="pref_show_nsfw_boards_title">Alle Boards</string>
     <string name="pref_show_nsfw_boards_summary">Unmoderated Boards anzeigen</string>
     <string name="pref_autohide_title">Autohide</string>
