--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -466,6 +466,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_hide_personal_summary">Завжди використовувати типові значення</string>
     <string name="pref_random_hash_title">Випадковий хеш</string>
     <string name="pref_random_hash_summary">Додавати кілька байтів у кінець прикріплених файлів</string>
+    <string name="pref_show_all_chans_list_title">Список іміджбордів</string>
+    <string name="pref_show_all_chans_list_summary">Показувати список всіх підтримуваних іміджбордів на новій вкладці</string>
     <string name="pref_show_nsfw_boards_title">Усі дошки</string>
     <string name="pref_show_nsfw_boards_summary">Показувати дошки без модерації</string>
     <string name="pref_autohide_title">Автосхов</string>
