--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -456,6 +456,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_hide_personal_summary">Always use the default values</string>
     <string name="pref_random_hash_title">Random hash</string>
     <string name="pref_random_hash_summary">Add a few bytes to the tail of attachment files</string>
+    <string name="pref_show_all_chans_list_title">Imageboards list</string>
+    <string name="pref_show_all_chans_list_summary">Show the list of all supported imageboards on the new tab page</string>
     <string name="pref_show_nsfw_boards_title">All boards</string>
     <string name="pref_show_nsfw_boards_summary">Show unmoderated boards</string>
     <string name="pref_autohide_title">Autohide</string>
