--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -418,6 +418,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="preferences">Einstellungen</string>
     <string name="pref_cat_chans">Imageboards</string>
     <string name="pref_chans_rearrange">Umstellen</string>
+    <string name="pref_chans_enter_url">URL eingeben</string>
+    <string name="pref_chans_enter_url_hint">http://</string>
+    <string name="pref_chans_enter_url_incorrect">Diese Imageboard wird nicht unterstützt</string>
     <string name="pref_cat_appearance">Aussehen</string>
     <string name="pref_cat_advanced">Erweiterte</string>
     <string name="pref_cat_date_time">Datum und Uhrzeit</string>
