--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -489,6 +489,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_replies_only_quantity_summary">Alternative Verweise auf Posts anzeigen</string>
     <string name="pref_gallery_screen_title">Galerie</string>
     <string name="pref_gallery_screen_summary">Erweiterte Einstellungen von Galerie</string>
+    <string name="pref_gallery_fullscreen_title">Vollbildmodus</string>
     <string name="pref_gallery_scroll_thread_title">Bis Anhänge blättern</string>
     <string name="pref_gallery_scroll_thread_summary">Thread bis Posts mit Anhängen aus Galerie blättern</string>
     <string name="pref_gallery_scaleimageview_title">Image Viewer</string>
