--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -498,6 +498,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_replies_only_quantity_summary">Альтернативний показ лінків на відповіді</string>
     <string name="pref_gallery_screen_title">Галерея</string>
     <string name="pref_gallery_screen_summary">Додаткові опції галереї</string>
+    <string name="pref_gallery_fullscreen_title">Повноекранний режим</string>
     <string name="pref_gallery_scroll_thread_title">Скрол до поточного додатку</string>
     <string name="pref_gallery_scroll_thread_summary">Прокручувати тред до постів із додатками з галереї</string>
     <string name="pref_gallery_scaleimageview_title">Переглядач картинок</string>
