--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -490,6 +490,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_gallery_screen_title">Galerie</string>
     <string name="pref_gallery_screen_summary">Erweiterte Einstellungen von Galerie</string>
     <string name="pref_gallery_fullscreen_title">Vollbildmodus</string>
+    <string name="pref_gallery_swipe_to_close_title">Zum Schließen swipe</string>
+    <string name="pref_gallery_swipe_to_close_summary">Zum Schließen von Galerie oben oder unten swipe</string>
     <string name="pref_gallery_scroll_thread_title">Bis Anhänge blättern</string>
     <string name="pref_gallery_scroll_thread_summary">Thread bis Posts mit Anhängen aus Galerie blättern</string>
     <string name="pref_gallery_scaleimageview_title">Image Viewer</string>
