--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -496,6 +496,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_gallery_screen_title">Галерея</string>
     <string name="pref_gallery_screen_summary">Дополнительные настройки галереи</string>
     <string name="pref_gallery_fullscreen_title">Полноэкранный режим</string>
+    <string name="pref_gallery_swipe_to_close_title">Закрывать свайпом</string>
+    <string name="pref_gallery_swipe_to_close_summary">Закрывать галерею свайпом вверх или вниз</string>
     <string name="pref_gallery_scroll_thread_title">Прокручивать к вложениям</string>
     <string name="pref_gallery_scroll_thread_summary">Прокручивать тред к постам с вложениями из галереи</string>
     <string name="pref_gallery_scaleimageview_title">Просмотрщик изображений</string>
