--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -382,9 +382,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_no_icon">No Icon</string>
     <string name="makaba_prefs_mobile_api">Mobile API</string>
     <string name="makaba_prefs_captcha_category">Captcha</string>
-    <string name="makaba_prefs_captcha_type">Captcha type</string>
-    <string name="makaba_prefs_google_fallback">Recaptcha 2.0 fallback</string>
-    <string name="makaba_prefs_google_fallback_summary">Use Google Recaptcha 2.0 in compatibility mode</string>
     <string name="makaba_prefs_domain_category">Domain</string>
     <string name="makaba_prefs_domain">Domain</string>
     <string name="makaba_prefs_domain_summary">Reserved domains: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
@@ -443,10 +440,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_ignore_ssl_errors_summary">Disable Hostname and Certificate Validation</string>
     <string name="pref_only_new_posts">Only new posts</string>
     <string name="pref_only_new_posts_summary">Load only new posts without reloading the whole thread</string>
-    <string name="pref_cat_connection_extended">Advanced Settings</string>
-    <string name="pref_okhttp">OkHttp</string>
-    <string name="pref_okhttp_summary">Alternative HTTP-client with SPDY (may be unstable!)</string>
-    <string name="pref_okhttp_unlocked">OkHttp preference is unlocked</string>
+    <string name="pref_captcha_type">Captcha type</string>
     <string name="pref_password_title">Password</string>
     <string name="pref_password_summary">Password for post deletion by default</string>
     <string name="pref_name_title">Name</string>
