--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -549,6 +549,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>Gurochan</item>
         <item>Tomorrow</item>
         <item>Mikuba</item>
+        <item>Пользовательская</item>
     </string-array>
     <string name="pref_font_size_title">Размер текста</string>
     <string-array name="pref_font_size_choices">
