select max rating (sfw/r-15/r-18/r-18g) on dobrochan

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -396,6 +396,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="dobrochan_prefs_domain">Домен</string>
     <string name="dobrochan_prefs_domain_summary">Резервные адреса: dobrochan.com, dobrochan.org, dobrochan.ru</string>
+    <string name="dobrochan_prefs_max_rating">Максимальный рейтинг</string>
     
     <string name="dvach_prefs_domain">Домен</string>
     <string name="dvach_prefs_domain_summary">Резервные адреса: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
