--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -390,6 +390,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="dobrochan_prefs_domain">Domain</string>
     <string name="dobrochan_prefs_domain_summary">Reserved domains: dobrochan.com, dobrochan.org, dobrochan.ru</string>
+    <string name="dobrochan_prefs_max_rating">Höchste Bewertung</string>
     
     <string name="dvach_prefs_domain">Domain</string>
     <string name="dvach_prefs_domain_summary">Reserved domains: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
