--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -397,6 +397,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="dobrochan_prefs_domain">Домен</string>
     <string name="dobrochan_prefs_domain_summary">Резервные адреса: dobrochan.com, dobrochan.org, dobrochan.ru</string>
     <string name="dobrochan_prefs_max_rating">Максимальный рейтинг</string>
+    <string name="dobrochan_prefs_show_captcha">Всегда показывать капчу</string>
+    <string name="dobrochan_prefs_show_captcha_summary">Показывать капчу, когда её вводить не требуется</string>
     
     <string name="dvach_prefs_domain">Домен</string>
     <string name="dvach_prefs_domain_summary">Резервные адреса: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
