--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -400,6 +400,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="dobrochan_prefs_domain">Домен</string>
     <string name="dobrochan_prefs_domain_summary">Резрвні адреси: dobrochan.com, dobrochan.org, dobrochan.ru</string>
     <string name="dobrochan_prefs_max_rating">Максимальний рейтинг</string>
+    <string name="dobrochan_prefs_show_captcha">Завжди показувати капчу</string>
+    <string name="dobrochan_prefs_show_captcha_summary">Показувати капчу, коли її вводити не потрібно</string>
     
     <string name="dvach_prefs_domain">Домен</string>
     <string name="dvach_prefs_domain_summary">Резервні адреси: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
