--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -566,6 +566,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_sidepanel_hide_summary">Не тримати панель вкладок весь час на екрані</string>
     <string name="pref_sidepanel_width_title">Ширина панелі вкладок</string>
     <string-array name="pref_sidepanel_width_choices">
+        <item>15\uff05</item>
+        <item>20\uff05</item>
         <item>25\uff05</item>
         <item>30\uff05</item>
         <item>35\uff05</item>
