--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -556,6 +556,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_sidepanel_hide_summary">Do not show the Tabs panel forever</string>
     <string name="pref_sidepanel_width_title">Tabs panel width</string>
     <string-array name="pref_sidepanel_width_choices">
+        <item>15\uff05</item>
+        <item>20\uff05</item>
         <item>25\uff05</item>
         <item>30\uff05</item>
         <item>35\uff05</item>
