--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -555,6 +555,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </string-array>
     <string name="pref_sidepanel_hide_title">Tabs Panel nicht zeigen</string>
     <string name="pref_sidepanel_hide_summary">Tabs Panel nicht ständig zeigen</string>
+    <string name="pref_sidepanel_right_title">Tabs Panel auf der rechten</string>
+    <string name="pref_sidepanel_right_summary">Tabs Panel auf der rechten zeigen</string>
     <string name="pref_sidepanel_width_title">Tabs Panelbreite</string>
     <string-array name="pref_sidepanel_width_choices">
         <item>15\uff05</item>
