--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -554,6 +554,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </string-array>
     <string name="pref_sidepanel_hide_title">Hide Tabs panel</string>
     <string name="pref_sidepanel_hide_summary">Do not show the Tabs panel forever</string>
+    <string name="pref_sidepanel_right_title">Tabs panel on the right</string>
+    <string name="pref_sidepanel_right_summary">Show the Tabs panel on the right</string>
     <string name="pref_sidepanel_width_title">Tabs panel width</string>
     <string-array name="pref_sidepanel_width_choices">
         <item>15\uff05</item>
